# Fundamentals

./: pullrequest
NLP/: firstSteps.ipynb
NLP/LLMs/: chunk1.md  chunk2.md
NLP/LLMs/llms/: LICENSE  Makefile  README.md  pyproject.toml
NLP/LLMs/llms/docs/: mkdocs.yml
NLP/LLMs/llms/docs/docs/: index.md
NLP/LLMs/llms/llms/: __init__.py  dataset.py  features.py  plots.py
NLP/LLMs/llms/llms/modeling/: predict.py  train.py
NLP/LLMs/llms/notebooks/: tokensVectorsEmbedings.ipynb
NLP/pytorchNNs/: =2.0.0  REDME.md  first.ipynb  requirements.txt  textprocessing.ipynb
SoftwareE/: chunck1.md  chunck2.md  chunck3.md  chunck4.md
cloud/AWS/: chunk1.md  chunk2.md
randomforestsalgorithms/: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
randomforestsalgorithms/docs/: mkdocs.yml
randomforestsalgorithms/docs/docs/: DesicionTrees.md  index.md
randomforestsalgorithms/notebooks/: 1.0_DARP_decision_tree_Carclasification.ipynb  1.0_DARP_randomForest.ipynb  2.0_DARP_decision_tree_Carclasification.ipynb  less
randomforestsalgorithms/randomforestsalgorithms/: __init__.py  dataset.py  features.py  plots.py
randomforestsalgorithms/randomforestsalgorithms/modeling/: predict.py  train.py
