[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "randomforestsalgorithms"
version = "0.0.1"
description = "this  is a learnning project to use  desicion trees and random forest for clasification in  a professional enviroment with diferent tools like nbdime git y github code spaces  and the implementation of hooks"
authors = [
  { name = "Daniel (daarojaspa)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["randomforestsalgorithms"]
force_sort_within_sections = true
