[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "llms"
version = "0.0.1"
description = "these are the basics of LLms backed with code"
authors = [
  { name = "Daniel" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"


[tool.ruff]
line-length = 99
src = ["llms"]
include = ["pyproject.toml", "llms/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["llms"]
force-sort-within-sections = true

